# fwd-deck

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  Taskfile.yml  fwd-deck.example.toml  mise.toml
.agents/skills/fwd-deck-release/: SKILL.md
.agents/skills/fwd-deck-release/agents/: openai.yaml
.agents/skills/fwd-deck-release/scripts/: prepare_release.py
.github/workflows/: check.yml  release.yml
apps/fwd-deck-app/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/fwd-deck-app/src/: main.tsx  styles.css
apps/fwd-deck-app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/fwd-deck-app/src-tauri/capabilities/: default.json
apps/fwd-deck-app/src-tauri/icons/: icon.icns
apps/fwd-deck-app/src-tauri/src/: main.rs
apps/fwd-deck-app/src/components/ui/: shadcn-compat.tsx
apps/fwd-deck-app/src/lib/: utils.ts
crates/fwd-deck-cli/: Cargo.toml
crates/fwd-deck-cli/src/: lib.rs  main.rs
crates/fwd-deck-cli/tests/: acceptance.rs
crates/fwd-deck-core/: Cargo.toml
crates/fwd-deck-core/src/: config.rs  lib.rs  path_display.rs  state.rs  tunnel.rs
docs/: cli.md  configuration.md  development.md  getting-started.md  release.md
