[workspace]
members = [
    "apps/fwd-deck-app/src-tauri",
    "crates/fwd-deck-core",
    "crates/fwd-deck-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
inquire = "0.9"
libc = "0.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false }
objc2-foundation = { version = "0.3.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2.10.3"
tauri-build = "2.5.6"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-single-instance = "2.4.1"
tempfile = "3"
thiserror = "2"
toml = "0.8"
unicode-width = "0.2"
