[package]
name = "fwd-deck-cli"
version = "0.3.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "fwd-deck"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
fwd-deck-core = { path = "../fwd-deck-core" }
inquire.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-width.workspace = true

[dev-dependencies]
tempfile.workspace = true
