[package]
name = "fwd-deck-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
fwd-deck-core = { path = "../../../crates/fwd-deck-core" }
serde.workspace = true
tauri.workspace = true
thiserror.workspace = true
