[package]
name = "fwd-deck-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
fwd-deck-core = { path = "../../../crates/fwd-deck-core" }
objc2.workspace = true
objc2-app-kit = { workspace = true, features = ["std", "NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { workspace = true, features = ["std", "NSData", "NSProcessInfo", "NSString"] }
serde.workspace = true
tauri = { workspace = true, features = ["image-png", "tray-icon"] }
tauri-plugin-dialog.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
